// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should change icon class prefix when using icon-prefix prop 1`] = `
<button
  type="button"
  class="mi-button mi-button--default mi-button--normal"
>
  <div class="mi-button__content">
    <i class="mi-badge__wrapper my-icon my-icon-success mi-button__icon">
    </i>
  </div>
</button>
`;

exports[`should render icon in the right side when setting icon-position to right 1`] = `
<button
  type="button"
  class="mi-button mi-button--default mi-button--normal"
>
  <div class="mi-button__content">
    <i class="mi-badge__wrapper mi-icon mi-icon-plus mi-button__icon">
    </i>
  </div>
</button>
`;

exports[`should render icon slot correctly 1`] = `
<button
  type="button"
  class="mi-button mi-button--default mi-button--normal"
>
  <div class="mi-button__content">
    <div class="mi-button__icon">
      Custom Icon
    </div>
    <span class="mi-button__text">
      Text
    </span>
  </div>
</button>
`;

exports[`should render loading slot correctly 1`] = `
<button
  type="button"
  class="mi-button mi-button--default mi-button--normal mi-button--loading"
>
  <div class="mi-button__content">
    Custom Loading
  </div>
</button>
`;
